# Terminal

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: .history  exceptions.py  functions.py  logger.py  main.py  utilities.py
src/config/: consts.py  exceptions.py  functions.py  list_of_ut.py  logger.py  utilities.py
src/utilities/: archivers.py  cat.py  cd.py  cp.py  grep.py  history.py  ls.py  mkdir.py  mv.py  rm.py  touch.py  undo.py
tests/: conftest.py  test_archivers.py  test_cat.py  test_cd.py  test_cp.py  test_grep.py  test_history.py  test_ls.py  test_mkdir.py  test_mv.py  test_other.py  test_rm.py  test_touch.py  test_undo.py
